--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,15 +1,44 @@
-*{
+* {
     margin: 0;
 }
+
 .main {
-    width: 100vw;
-    height: 100vh;
+    width: 80vw;
+    height: 80vh;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+
+.center {
+    height: 50%;
+    width: 50%;
+    /* overflow: auto; */
+    margin: auto;
+}
+
+ h1 , h2{
+    background-color: navy;
+    color: white;
+    padding: 10px;
+    align-items: center;
+    margin: 1px 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    margin-left: 50px;
 }
-.center{
-    height: 80%;
-    width: 80%;
-    overflow: auto;
+input{
+    width: 95%;
+    padding: 10px 0;
+    margin: 10px 0;
+    margin-left: 50px;
 }
+button {
+    background: navy;
+    border: none;
+    width: 96%;
+    color: white;
+    padding: 10px;
+    margin-left: 50px;
+}
+ 
