--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2,21 +2,23 @@
     margin: 0;
 }
 
-.main {
-    width: 80vw;
-    height: 80vh;
+/* .main { */
+    /* width: 80vw;
+    height: 80vh; */
     /* display: flex;
     justify-content: center;
     align-items: center; */
-}
+/* } */
 
-.center {
-    height: 50%;
-    width: 50%;
+/* .center { */
+    /* height: 50%;
+    width: 50%; */
     /* overflow: auto; */
-    margin: auto;
-}
+    /* margin: auto; */
+/* } */
 
+
+/* 
  h1 , h2{
     background-color: navy;
     color: white;
@@ -40,5 +42,22 @@ button {
     color: white;
     padding: 10px;
     margin-left: 50px;
+} */
+
+ul{
+    list-style: none;
+    background-color: blue;
+    padding: 10px;
 }
- 
+li{
+    display: inline;
+    padding: 10px;
+    background-color: navy;
+}
+a{
+    color: white;
+    text-decoration: none;
+} 
+.active{
+    border-bottom: 2px solid white;
+}
